--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!DOCTYPE html>
+<html lang = "ja">
+  <head>
+    <meta charset="UTF-8">
+    <title>練習13</title>
+  </head>
+  <body>
+    <section>
+      <p id ="countdown"></p>
+    </section>
+    <script type ="text/javascript" src = "js/default.js"></script>
+  </body>
+</html>
