--- a/other.html
+++ b/other.html
@@ -4,5 +4,18 @@
   <meta charset = "UTF-8">
   <title>別のページ</title>
  </head>
- <body></body>
+ <body>
+  <nav>
+   <form id = "form">
+    <select name = "select">
+     <option value = "index.html">メインページ</option>
+     <option value = "other.html">別のページ</option>
+    </select>
+   </form>
+  </nav>
+  <section>
+   <p>別のページです</p>
+  </section>
+  <script type ="text/javascript" src = "js/default.js"></script>
+ </body>
 </html>
