--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>練習13</title>
   </head>
   <body>
+     <nav>
+     <form id = "form">
+      <select name = "select">
+       <option value = "index.html">メインページ</option>
+       <option value = "other.html">別のページ</option>
+      </select>
+     </form>
+     </nav>
     <section>
       <p id ="countdown"></p>
     </section>
