--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
      </nav>
     <section>
       <p id ="countdown"></p>
+      <p id = "cookie"></p>
+      <form action ="#" id = "remove_cookie">
+       <input type = "submit" value ="Cookieの削除">
+      </form>
     </section>
     <script type ="text/javascript" src = "js/default.js"></script>
   </body>
