--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       </select>
      </form>
      </nav>
+     <section>
+       <p id ="countdown"></p>
+     </section>
     <section>
-      <p id ="countdown"></p>
       <p id = "cookie"></p>
       <form action ="#" id = "remove_cookie">
        <input type = "submit" value ="Cookieの削除">
