--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
        <p id ="countdown"></p>
      </section>
      <script type ="text/javascript" src = "js/default.js"></script>
-     <section>
-      <p id = "cookie"></p>
-      <form action ="#" id = "remove_cookie">
-       <input type = "submit" value ="Cookieの削除">
-      </form>
-     </section>
-     <script type ="text/javascript" src = "js/default.js"></script>
+     //<section>
+      //<p id = "cookie"></p>
+      //<form action ="#" id = "remove_cookie">
+      // <input type = "submit" value ="Cookieの削除">
+     // </form>
+     //</section>
+    // <script type ="text/javascript" src = "js/default.js"></script>
   </body>
 </html>
