--- a/other.html
+++ b/other.html
@@ -14,10 +14,13 @@
    </form>
   </nav>
   <section>
+   <p>別のページです</p>
+   <!--
    <p id = "cookie">別のページです</p>
    <form action ="#" id = "remove_cookie">
     <input type = "submit" value ="Cookieの削除">
    </form>
+   -->
   </section>
   <script type ="text/javascript" src = "js/default.js"></script>
  </body>
