--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>練習13</title>
   </head>
   <body>
+    <section class = "image">
+      <div class = "center">
+        <div>
+          <img src = "img/" id = "bigmg">
+        </div>
+        <ul>
+          <li><img src = "img/" class = "thumb" data-image = ""></li>
+          <li><img src = "img/" class = "thumb" data-image = ""></li>
+        </ul>
+      </div>
+    </section>
      <nav>
      <form id = "form">
       <select name = "select">
