--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <section class = "image">
       <div class = "center">
         <div>
-          <img src = "img/" id = "bigmg">
+          <img src = "img/image1.JPG" id = "bigmg">
         </div>
         <ul>
-          <li><img src = "img/" class = "thumb" data-image = ""></li>
-          <li><img src = "img/" class = "thumb" data-image = ""></li>
+          <li><img src = "img/image1.JPG" class = "thumb" data-image = "image1"></li>
+          <li><img src = "img/hujisan.jpeg" class = "thumb" data-image = "hujisan"></li>
         </ul>
       </div>
     </section>
