--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
           <img src = "img/image1.JPG" id = "bigmg">
         </div>
         <ul>
-          <li><img src = "img/image1.JPG" class = "thumb" data-image = "image1"></li>
-          <li><img src = "img/hujisan.jpeg" class = "thumb" data-image = "hujisan"></li>
+          <li><img src = "img/thumb-image1.JPG" class = "thumb" data-image = "image1"></li>
+          <li><img src = "img/thumb-hujisan.jpeg" class = "thumb" data-image = "hujisan"></li>
         </ul>
       </div>
     </section>
